2006-01-22  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.0.52 released.

	* tramp.el, tramp-ftp.el, tramp-util.el, tramp-vc.el: Add code for
	unloading Tramp.  See comment before `tramp-unload-tramp' for
	checklist.

	* tramp.el (tramp-unload-file-name-handler-alist)
	(tramp-unload-tramp): New defuns.
	(tramp-advice-PC-expand-many-files): New defadvice.
	(tramp-save-PC-expand-many-files, tramp-setup-complete) Defuns
	removed.

	* tramp-ftp.el (tramp-ftp-enable-ange-ftp): New defun.

	* tramp-util.el (top): Apply `ignore' instead of `identity' for
	byte-compiler pacification.

2005-12-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name): Remove double slash.

2005-11-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-util.el (top): Fix compilation warning.

2005-11-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-attributes-with-ls): Return t as
	9th attribute.  It doesn't matter, because it will be converted
	later on.
	(tramp-handle-file-ownership-preserved-p): Rewritten.  The old
	implementation was just heuristic.
	(tramp-post-connection): Set uid and gid properties.
	(tramp-convert-file-attributes): Set file's gid change bit.
	(tramp-get-remote-uid, tramp-get-remote-gid): New defuns.

2005-11-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name): Use "~root" for tilde
	expansion in case of su(do)? methods.  The home directory of the
	local user will be taken else.

2005-11-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-open-connection-telnet)
	(tramp-open-connection-rsh, tramp-open-connection-su)
	(tramp-open-connection-multi): Set PS1 to "$ ".  Otherwise, a
	local shell prompt could hurt.  Reported by Romain Francoise
	<romain@orebokech.com>.

2005-11-02  Lars Hansen  <larsh@soem.dk>

	* tramp.el (tramp-action-out-of-band): Handle scp message
	"Permission denied".

2005-10-30  Michael Albinus  <michael.albinus@gmx.de>
